Changes --> Connected app to the database using JPA --> Designed a web form --> Able to make an entry to the database using the webpage

--- a/src/main/webapp/information.html
+++ b/src/main/webapp/information.html
@@ -3,7 +3,7 @@
     <title>Input form</title>
     <h1 align="center"> Data entry @FormQuery form TestDatabase</h1>
 </head>
-<body>
+<body bgcolor="#7fffd4">
 <form action="webapi/my/postDB" method="post">
     <h3 align="center">
   <input type="number" placeholder="Enter id" name="id">
